--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,13 @@
 [versions]
 agp = "8.1.4"
+coreTesting = "2.2.0"
+espressoContrib = "3.5.1"
+fragmentTesting = "1.7.0-alpha05"
+hamcrestAll = "1.3"
+hiltAndroidTesting = "2.43.2"
+kotlinxCoroutinesTest = "1.6.4"
+mockitoAndroid = "4.7.0"
+mockitoCore = "4.7.0"
 org-jetbrains-kotlin-android = "1.9.0"
 core-ktx = "1.9.0"
 junit = "4.13.2"
@@ -8,21 +16,32 @@ espresso-core = "3.5.1"
 appcompat = "1.6.1"
 material = "1.9.0"
 constraintlayout = "2.1.4"
+robolectric = "4.8.1"
 roomdb = "2.6.0"
 roomCompilerKts = "1.9.0-1.0.13"
 hilt = "2.48"
 coroutines = "1.3.9"
 navigation = "2.7.5"
 lifecycle = "2.6.2"
+truth = "1.1.3"
 
 [libraries]
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
+androidx-fragment-testing = { module = "androidx.fragment:fragment-testing", version.ref = "fragmentTesting" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espressoContrib"}
+hamcrest-all = { module = "org.hamcrest:hamcrest-all", version.ref = "hamcrestAll" }
+hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hiltAndroidTesting" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-mockito-android = { module = "org.mockito:mockito-android", version.ref = "mockitoAndroid" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 roomdb = { group = "androidx.room", name = "room-runtime", version.ref = "roomdb" }
 roomKtx = { group = "androidx.room", name = "room-ktx", version.ref = "roomdb" }
 roomdbCompiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomdb" }
@@ -32,6 +51,7 @@ coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-andro
 navigationFragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 navigationUi = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 navigationSafeArgs = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navigation" }
+truth = { module = "com.google.truth:truth", version.ref = "truth" }
 viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
 lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
